# axiom

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt  Cast.h  Event.h  Hookable.cpp  Hookable.h  LazyInitializer.h  NamedLambda.h  Promise.h  Sequence.h  SequenceOperators.h  SharedHookable.cpp  SharedHookable.h  SingleIter.h  SlotMap.h  TrackedObject.cpp  TrackedObject.h  WatchSequence.h  WatchSequenceOperators.h  tests.cpp
compiler/: CMakeLists.txt  Cargo.toml  SourcePos.h  main.cpp  util.cpp  util.h
compiler/ast/: AssignExpression.h  AssignableExpression.h  Block.h  CallExpression.h  CastExpression.h  ControlExpression.h  Expression.h  Form.h  LValueExpression.h  MathExpression.h  NoteExpression.h  NumberExpression.h  PostfixExpression.h  PropertyExpression.h  TupleExpression.h  UnaryExpression.h  VariableExpression.h
compiler/codegen/: Array.cpp  Array.h  ArrayType.cpp  ArrayType.h  Builder.cpp  Builder.h  CMakeLists.txt  CodegenError.h  ComposableModuleClass.cpp  ComposableModuleClass.h  ComposableModuleClassMethod.cpp  ComposableModuleClassMethod.h  Context.cpp  Context.h  Control.cpp  Control.h  ControlClassMethod.cpp  ControlClassMethod.h  ControlDeclaration.cpp  ControlDeclaration.h  ControlField.cpp  ControlField.h  ControlFieldClassMethod.cpp  ControlFieldClassMethod.h  Converter.cpp  Converter.h  CustomNode.h  ExpressionGenerator.cpp  ExpressionGenerator.h  Form.cpp  Form.h  Function.cpp  Function.h  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  Functions.h  GroupNode.h  Instantiable.h  InstantiableFunction.cpp  (+32 more)
compiler/codegen-old/: Control.cpp  Control.h  Converter.h  Instantiable.cpp  Instantiable.h  InstantiableFunction.cpp  Node.cpp  Node.h
compiler/codegen-old/controls/: ExtractControl.cpp  ExtractControl.h  MidiControl.cpp  NumControl.h
compiler/codegen-old/converters/: BeatsConverter.cpp  BeatsConverter.h  ControlConverter.h  FrequencyConverter.h  SecondsConverter.cpp  SecondsConverter.h
compiler/codegen-old/functions/: ScalarExternalFunction.cpp  VectorIntrinsicFoldFunction.cpp  VectorIntrinsicFunction.cpp  VectorIntrinsicFunction.h
compiler/codegen/controls/: CMakeLists.txt  ExtractControl.cpp  ExtractControl.h  MidiControl.h  NumControl.cpp  NumberControl.cpp  NumberControl.h  ScalarControl.cpp  ScalarControl.h  VectorScopeControl.cpp  VectorScopeControl.h
compiler/codegen/converters/: AmplitudeConverter.cpp  AmplitudeConverter.h  BeatsConverter.cpp  BeatsConverter.h  CMakeLists.txt  ControlConverter.cpp  ControlConverter.h  DbConverter.cpp  DbConverter.h  FrequencyConverter.cpp  FrequencyConverter.h  LinearConverter.cpp  LinearConverter.h  NoneConverter.cpp  NoneConverter.h  NoteConverter.cpp  NoteConverter.h  OscillatorConverter.cpp  (+8 more)
compiler/common/: CMakeLists.txt  CompileError.h  ControlDirection.h  ControlType.cpp  ControlType.h  FormType.cpp  FormType.h  MidiEventType.h  OperatorType.cpp  OperatorType.h
compiler/editor/: CustomNode.cpp  CustomNode.h  ErrorLog.h  NodeControl.h
compiler/lib/: graph.cpp
compiler/llvmmaxim/: CMakeLists.txt  LLVMMaxim.cpp  OrcCBindingsStack.h  OrcJit.h
compiler/parser/: CMakeLists.txt  ParseError.h  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h
compiler/runtime/: CMakeLists.txt  CompileLeaf.cpp  CompileLeaf.h  CompileUnit.cpp  CompileUnit.h  Control.cpp  Control.h  ControlGroup.cpp  ControlGroup.h  CustomNode.cpp  CustomNode.h  ErrorLog.h  Exporter.cpp  Exporter.h  ExposedControl.cpp  ExposedControl.h  GeneratableModuleClass.cpp  GeneratableModuleClass.h  GroupNode.cpp  GroupNode.h  HardControl.cpp  HardControl.h  IOControl.cpp  IOControl.h  IONode.cpp  IONode.h  Jit.cpp  Jit.h  ModuleRuntimeUnit.cpp  ModuleRuntimeUnit.h  Node.cpp  Node.h  OutputControl.cpp  OutputControl.h  OutputNode.cpp  OutputNode.h  RootSchematic.cpp  RootSchematic.h  RootSurface.cpp  RootSurface.h  (+15 more)
compiler/runtime-old/: CompileUnit.h  Control.h  ControlGroup.cpp  ControlGroup.h  CustomNode.h  ErrorLog.h  Jit.cpp  Node.cpp  Node.h  OutputNode.cpp  OutputNode.h  RootSchematic.cpp  Runtime.cpp  Schematic.cpp  SoftControl.h  ValueOperator.cpp
compiler/src/: compile_error.rs  lib.rs  main.rs
editor/: AxiomApplication.cpp  AxiomApplication.h  AxiomEditor.cpp  AxiomEditor.h  AxiomVstEditor.cpp  AxiomVstEditor.h  AxiomVstPlugin.cpp  AxiomVstPlugin.h  CMakeLists.txt  StandaloneAudio.h  StandaloneAudioNull.cpp  StandaloneAudioPA.cpp  main.cpp  util.cpp  util.h
editor/backend/: AudioBackend.cpp  AudioBackend.h  AudioConfiguration.cpp  AudioConfiguration.h  BackendDefines.cpp  BackendDefines.h  CMakeLists.txt  EventConverter.cpp  EventConverter.h  PersistentParameters.h
editor/compiler/: CMakeLists.txt  ConstantValue.h  ControlRef.cpp  ControlRef.h  CustomNodeMirBuilder.cpp  CustomNodeMirBuilder.h  Error.cpp  Frontend.h  NodeRef.h  OwnedObject.h  Runtime.cpp  SurfaceMirBuilder.cpp  SurfaceMirBuilder.h  ValueGroupSource.h
editor/layouts/: FlowLayout.cpp
editor/model/: CMakeLists.txt  CachedSequence.h  CloneReferenceMapper.cpp  CloneReferenceMapper.h  CollectionView.h  CollectionViewOperators.h  ConnectionWire.cpp  ConnectionWire.h  Event.h  Grid.h  GridItem.cpp  GridItem.h  GridSurface.cpp  GridSurface.h  HistoryList.cpp  HistoryList.h  Hookable.cpp  Hookable.h  IdentityReferenceMapper.h  IndexedSequence.h  Library.cpp  Library.h  LibraryEntry.cpp  LibraryEntry.h  ModelObject.cpp  ModelObject.h  ModelRoot.cpp  ModelRoot.h  Pool.cpp  Pool.h  PoolObject.cpp  PoolObject.h  PoolOperators.h  Project.cpp  Project.h  Promise.h  PromiseOperators.h  Ref.cpp  Ref.h  ReferenceMapper.h  (+13 more)
editor/resources/: Info.plist.in  MainStyles.qss  ModulePreviewList.qss  NodePanel.qss  TagLineEdit.qss  axiom.icns  axiom.rc  axiom.rc.in  default.axl  res.qrc  resource.h
editor/widgets/: CMakeLists.txt  CommonColors.cpp  CommonColors.h  FloatingValueEditor.cpp  FloatingValueEditor.h  GlobalActions.cpp  GlobalActions.h  IConnectable.h  InteractiveImport.cpp  InteractiveImport.h  ItemResizer.cpp  ItemResizer.h  SpaceCompleter.cpp  SpaceCompleter.h
(+908 files in other folders)
