[package]
name = "compiler"
version = "0.1.0"
authors = ["cpdt <copodt@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "compiler"
crate-type = ["staticlib"]

[dependencies]
regex = "1.1"
lazy_static = "1.2"
ordered-float = "0.5"
inkwell = { git = "https://github.com/cpdt/inkwell", branch = "llvm6-0" }
divrem = "0.1"
